--- a/main.css
+++ b/main.css
@@ -36,6 +36,12 @@ body {
     cursor: pointer;
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
+    transition: background-color 0.3s ease-in;
+  }
+
+  button:hover {
+      background-color: #f6980c;
+      box-shadow: 0 16px 38px rgba(246 152 12 / 20%);
   }
 
   .about {
@@ -81,4 +87,90 @@ body {
     padding: 25px;
     background-color: green;
     color: white;
+}
+
+.form {
+    display: flex;
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
+.form form{
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+.form__container {
+    width: 550px;
+}
+.form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+.form h1 {
+    font-size: 48px;
+}
+.form p {
+    font-size: 18px;
+    opacity: 0.65;
+}
+.form label {
+    font-size: 18px;
+    font-weight: 600px;
+    margin-bottom: 15px;
+}
+.form select, .form input {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0px 20px;
+    border: none;
+    border-radius: 15px;
+}
+.form__submit {
+    font-size: 18px;
+    font-weight: 600px;
+    margin-top: 40px;
+}
+
+select {
+    appearance: none;
+  }
+
+input {
+    outline: none;
+  }
+
+footer {
+    padding: 90px 20px;
+}
+.footer__container {
+    display: flex;
+    justify-content: center;
+}
+.footer__copyright {
+    padding-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+}
+.footer__group {
+    padding-right: 80px;
+}
+.footer__group h3 {
+    font-size: 16px;
+    opacity: 0.7;
+    padding-bottom: 30px;
+}
+.footer__links {
+    display: flex;
+    flex-direction: column;
+}
+.footer__links a {
+    padding-bottom: 15px;
 }
