--- a/main.css
+++ b/main.css
@@ -62,6 +62,8 @@ body {
 .about_sun-image {
     height: 100px;
     width: 100px;
+    position: absolute;
+    animation: rotation 10s linear infinite;
 }
 .about h1 {
     font-size: 70px;
@@ -173,4 +175,14 @@ footer {
 }
 .footer__links a {
     padding-bottom: 15px;
+}
+
+@keyframes rotation {
+    0%{
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
 }
