--- a/img/Солнечные батареи GreenCorp_files/main.css
+++ b/img/Солнечные батареи GreenCorp_files/main.css
@@ -3,18 +3,12 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
-    background: transparent;
+    background: white;
     z-index: 1;
-    transition: background-color 0.25s ease, box-shadow 0.25s ease;
 }
-.header__scrolled{
-    background-color:white;
-    box-shadow: 0 12px 34px -11px rgb(65 62 101 / 10%);
-}
+
 body {
     font-family: 'Raleway', sans-serif;
     color: #213053;
@@ -60,7 +54,7 @@ body {
       justify-content: space-around;
       align-items: center;
       flex-shrink: 1;
-      padding-top: 200px;
+      padding-top: 115px;
       padding-bottom: 115px;
       background: url('img/back.png') no-repeat;
       background-position: center;
